# music_genre_classification

./: .gitignore  README.md  pyproject.toml  run_web.py
frontend/: app.js  index.html  styles.css
src/music_genre_classifier/: __init__.py  app.py  audio_features.py  cli.py  constants.py  dataset.py  modeling.py  prepare_dataset.py  web.py
