[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-genre-classification"
version = "0.1.0"
description = "Starter project for classifying music genres from audio files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.4.2",
  "librosa>=0.10.2",
  "numpy>=1.26.4",
  "scikit-learn>=1.5.1",
]

[project.optional-dependencies]
ui = [
  "streamlit>=1.44.0",
]
web = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "python-multipart>=0.0.9",
]
dev = [
  "pytest>=8.3.2",
]

[project.scripts]
genre-classifier = "music_genre_classifier.cli:main"
prepare-gtzan = "music_genre_classifier.prepare_dataset:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
